- update layout about

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -12,38 +12,59 @@
       <h1>Strava Heatmap</h1>
       <div class="message" id="message"></div>
       <div class="actions">
-        <a
-          href="https://github.com/julcnx/strava-heatmap-extension/blob/v0.13.2/README.md"
-          target="_blank"
-          class="action-btn"
-        >
-          <span>📚</span>
-          <span>Help & Instructions</span>
-        </a>
-        <a
-          href="https://github.com/julcnx/strava-heatmap-extension/blob/master/CHANGELOG.md"
-          target="_blank"
-          class="action-btn"
-        >
-          <span>📖</span>
-          <span>View changelog</span>
-        </a>
-        <a
-          href="https://github.com/julcnx/strava-heatmap-extension/issues"
-          target="_blank"
-          class="action-btn"
-        >
-          <span>🐞</span>
-          <span>Submit a bug or improvement</span>
-        </a>
-        <a href="#rate" target="_blank" class="action-btn">
-          <span>⭐</span>
-          <span>Rate this extension</span>
-        </a>
-        <a href="https://ko-fi.com/julcnx" target="_blank" class="action-btn">
-          <span>❤️</span>
-          <span>Support this extension</span>
-        </a>
+        <div class="actions-column">
+          <a
+            href="https://github.com/julcnx/strava-heatmap-extension/blob/v0.13.2/README.md"
+            target="_blank"
+            class="action-btn"
+          >
+            <span>📚</span>
+            <span>Help & Instructions</span>
+          </a>
+          <a
+            href="https://www.openstreetmap.org/edit?editor=id"
+            target="_blank"
+            class="action-btn primary"
+          >
+            <img
+              src="https://www.openstreetmap.org/favicon.ico"
+              alt=""
+              width="24"
+              height="24"
+            />
+            <span>Try with OpenStreetMap</span>
+          </a>
+          <a href="https://gpx.studio/" target="_blank" class="action-btn primary">
+            <img src="https://gpx.studio/favicon.png" alt="" width="24" height="24" />
+            <span>Try with GPX Studio</span>
+          </a>
+          <a
+            href="https://github.com/julcnx/strava-heatmap-extension/blob/master/CHANGELOG.md"
+            target="_blank"
+            class="action-btn"
+          >
+            <span>📖</span>
+            <span>View changelog</span>
+          </a>
+        </div>
+        <div class="actions-column">
+          <a
+            href="https://github.com/julcnx/strava-heatmap-extension/issues"
+            target="_blank"
+            class="action-btn"
+          >
+            <span>🐞</span>
+            <span>Submit a bug or improvement</span>
+          </a>
+          <a href="#rate" target="_blank" class="action-btn">
+            <span>⭐</span>
+            <span>Rate this extension</span>
+          </a>
+          <a href="https://ko-fi.com/julcnx" target="_blank" class="action-btn">
+            <span>❤️</span>
+            <span>Support this extension</span>
+          </a>
+        </div>
       </div>
     </div>
     <script src="../../lib/browser-polyfill.min.js"></script>
