improve README and changelog version referencing

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -13,11 +13,7 @@
       <div class="message" id="message"></div>
       <div class="actions">
         <div class="actions-column">
-          <a
-            href="https://github.com/julcnx/strava-heatmap-extension/blob/v0.13.2/README.md"
-            target="_blank"
-            class="action-btn"
-          >
+          <a href="#readme" target="_blank" class="action-btn">
             <span>📚</span>
             <span>Help & Instructions</span>
           </a>
@@ -34,15 +30,11 @@
             />
             <span>Try with OpenStreetMap</span>
           </a>
-          <a href="https://gpx.studio/" target="_blank" class="action-btn primary">
+          <a href="https://gpx.studio/app" target="_blank" class="action-btn primary">
             <img src="https://gpx.studio/favicon.png" alt="" width="24" height="24" />
             <span>Try with GPX Studio</span>
           </a>
-          <a
-            href="https://github.com/julcnx/strava-heatmap-extension/blob/master/CHANGELOG.md"
-            target="_blank"
-            class="action-btn"
-          >
+          <a href="#changelog" target="_blank" class="action-btn">
             <span>📖</span>
             <span>View changelog</span>
           </a>
