--- a/src/about/index.html
+++ b/src/about/index.html
@@ -13,6 +13,10 @@
       <div class="message" id="message"></div>
       <div class="actions">
         <div class="actions-column">
+          <a href="#changelog" target="_blank" class="action-btn">
+            <span>📖</span>
+            <span>What's new ?</span>
+          </a>
           <a href="#readme" target="_blank" class="action-btn">
             <span>📚</span>
             <span>Help & Instructions</span>
@@ -33,10 +37,6 @@
           <a href="https://gpx.studio/app" target="_blank" class="action-btn primary">
             <img src="https://gpx.studio/favicon.png" alt="" width="24" height="24" />
             <span>Try with GPX Studio</span>
-          </a>
-          <a href="#changelog" target="_blank" class="action-btn">
-            <span>📖</span>
-            <span>View changelog</span>
           </a>
         </div>
         <div class="actions-column">
