update about page with [DEV] title

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Strava Heatmap</title>
+    <title id="page-title"></title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div class="container">
       <img src="../../icons/icon-128.png" alt="Strava Heatmap" class="icon" />
-      <h1>Strava Heatmap</h1>
+      <h1 id="page-heading"></h1>
       <div class="message" id="message"></div>
       <div class="actions">
         <div class="actions-column">
